apps/support/tactical-rmm/base/ingress-mesh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcentral
spec:
  ingressClassName: nginx
  tls:
  - hosts: [mesh.support4u.se]
    secretName: support4u-tls
  rules:
  - host: mesh.support4u.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meshcentral
            port:
              number: 4443
